# NexusLink

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  installer.nsi
NEXUS-share/: README.txt
build-gui/: CMakeCache.txt  Makefile  cleanup_legacy_builds.cmake  cmake_install.cmake
data/downloads/: sample.txt
data/logs/: chat.txt
src/: main.cpp
src/chat/: chat.cpp  chat.h
src/core/: app.cpp  app.h
src/file/: file_manager.h  file_receiver.cpp  file_sender.cpp
src/network/: connection.cpp  connection.h  discovery.cpp  discovery.h  socket.cpp  socket.h
src/security/: encryption.cpp  encryption.h
src/ui/: gui.cpp  gui.h
src/utils/: helpers.h  logger.cpp  logger.h
